--- a/blox/my-block.css
+++ b/blox/my-block.css
@@ -1,1 +1,103 @@
 /* Add your block styles here */
+::-moz-selection {
+   background: #FDEEC9;
+   /* color: #fff; */
+}
+::selection {
+   background: #FDEEC9;
+   /* color: #fff; */
+}
+
+body{
+  font-size: 15pt;
+  margin-left: 12%;
+  margin-right: 12%;
+}
+
+img {
+    float: left;
+    width: 288px;
+    margin-right: 40px;
+    margin-top: 35px;
+    margin-bottom: 10px;
+}
+
+.br {
+  line-height: 70%;
+}
+
+#intro {
+  font-size: 15pt;
+  margin-left: 270px;
+  margin-right: 5%;
+}
+
+.ref {
+  color: #546447; /*  #AB6F55*/
+}
+
+.section {
+  font-size: 27pt;
+  font-weight: 500;
+  margin-bottom: 7px;
+}
+
+.divider {
+   border: 0;
+   border-top: 1.5px solid #DAD8C9;
+   background: none;
+   margin-top: 0;
+}
+
+a {
+      -webkit-transition: color 0s; /* For Safari 3.0 to 6.0 */
+      transition: color 0s; /* For modern browsers */
+  }
+a:hover {
+  text-decoration: none;
+  color: #4f8b04; /* #EC7D3C #856256 */
+}
+
+
+/*1410 - 1100*/
+@media only screen and (max-width: 1410px) {
+  img {
+    margin-bottom: 150px;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  img {
+    margin-bottom: 10px;
+  }
+}
+
+@media only screen and (max-width: 1044px) {
+  #intro {
+    margin-left: 0px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+ img {
+   float: middle;
+   width: 100%;
+   /* padding-right: 10%; */
+   /* padding-left: 10%;  */
+   padding-bottom: 10px;
+ } 
+ body {
+  font-size: 12pt;
+  /* text-align:center; */
+  margin-left: 0%;
+  margin-right: 0%;
+ }
+ #intro {
+  font-size: 12pt;
+  margin-left: 0px;
+  margin-right: 0px;
+ }
+ .section {
+  font-size: 20pt;
+ }
+}
